[package]
name = "obs-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.18"
octocrab = "0.31.0"
reqwest = "0.11.22"
serde = "1.0.188"
serde_json = "1.0.107"
shuttle-axum = "0.28.0"
shuttle-runtime = "0.28.0"
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
