[package]
name = "obs-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.6.20"
octocrab = "0.32.0"
reqwest = "0.11.22"
serde = "1.0.188"
serde_json = "1.0.107"
shuttle-axum = "0.34.1"
shuttle-runtime = "0.34.1"
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
